--- a/package.json
+++ b/package.json
@@ -1,8 +1,17 @@
 {
   "private": true,
   "scripts": {
-    "build": "./build.sh",
-    "lint": "npx eslint",
-    "test": "npm run lint"
+    "build": "gulp build",
+    "lint": "gulp lint"
+  },
+  "devDependencies": {
+    "del": "^6.0.0",
+    "eslint": "^7.22.0",
+    "gulp": "^4.0.2",
+    "gulp-eslint": "^6.0.0",
+    "gulp-rename": "^2.0.0",
+    "gulp-replace-task": "^2.0.1",
+    "gulp-rollup": "^2.17.0",
+    "rollup": "^2.41.4"
   }
 }
