--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "gulp": "^4.0.2",
     "gulp-eslint": "^6.0.0",
     "gulp-rename": "^2.0.0",
-    "gulp-replace-task": "^2.0.1",
     "gulp-rollup": "^2.17.0",
-    "rollup": "^2.41.4"
+    "gulp-transform": "^3.0.5",
+    "rollup": "^2.41.4",
+    "svg2img": "^0.9.1"
   }
 }
