Set the icon based on the tab state
We will now show a different icon when UpFish is active on the current
tab, and maintain the state of that icon when the tab changes.

When active, the color of the icon is now "lightsalmon", because of
course it is.

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -44,5 +44,8 @@
     "default_icon": {
       "128": "upfish.png"
     }
+  },
+  "background": {
+    "service_worker": "service-worker.js"
   }
 }
