Start migrating configs to storage
Now the list of available configs will be pulled from the user's account, and
will default to a built-in list when empty.  This paves the way to give users
the ability to add custom configs.

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -6,6 +6,7 @@
   "permissions": [
     "activeTab",
     "declarativeNetRequest",
+    "storage",
     "scripting"
   ],
   "declarative_net_request": {
