--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "del": "^6.0.0",
     "eslint": "^7.22.0",
     "gulp": "^4.0.2",
+    "gulp-crx-pack": "^1.0.2",
     "gulp-eslint": "^6.0.0",
     "gulp-rename": "^2.0.0",
     "gulp-transform": "^3.0.5",
