--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "devDependencies": {
     "del": "^6.0.0",
     "eslint": "^7.22.0",
+    "eslint-config-google": "^0.14.0",
     "gulp": "^4.0.2",
     "gulp-crx-pack": "^1.0.2",
     "gulp-eslint": "^6.0.0",
