Fix another typo in release workflow

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -43,7 +43,7 @@ jobs:
         run: npm run release
 
       - name: Publish to Web Store
-        run:
+        run: |
           ACCESS_TOKEN=$(curl "https://accounts.google.com/o/oauth2/token" -d "client_id=${{ secrets.OAUTH_CLIENT_ID }}&client_secret=${{ secrets.OAUTH_CLIENT_SECRET }}&refresh_token=${{ secrets.OAUTH_REFRESH_TOKEN }}&grant_type=refresh_token&redirect_uri=urn:ietf:wg:oauth:2.0:oob" | jq -r .access_token)
           curl \
             -H "Authorization: Bearer $ACCESS_TOKEN"  \
