--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
     "gulp-transform": "^3.0.5",
     "gulp-zip": "^5.1.0",
     "rollup": "^2.79.2",
-    "svg2img": "^0.9.1"
+    "svg2img": "^1.0.0-beta.2"
   }
 }
